# lr1_project

./: CMakeLists.txt  README.md  build.sh  grammar.txt  main.cpp  readme.md
core/: CMakeLists.txt  LR1.cpp  grammar.cpp  parser.cpp  reader.cpp
include/: LR1.h  grammar.h  parser.h  reader.h
